Vivek: HIVE-104257: fix: center align labels in care view task filter tab (#33)

--- a/src/features/CareViewPatientsSummary/styles/CareViewPatientsSummary.scss
+++ b/src/features/CareViewPatientsSummary/styles/CareViewPatientsSummary.scss
@@ -2,6 +2,10 @@
 .patient-row-container {
   display: flex;
 
+  .task-filter-switcher .bx--content-switcher-btn {
+    justify-content: center;
+  }
+
   .patient-details-container {
     box-sizing: border-box;
     width: 420px;
